oof, added negative margin for IE to compensate for extra space above subalbum links in nested <ul>'s.. don't know where the space comes from (only in IE), this was the only fix I found.
git-svn-id: file:///home/jmullan/src/gallery-git/repo/trunk/gallery2@10453 57fcd75e-5312-0410-8df3-f5eb6fbb1595

--- a/layouts/classic/layout.css
+++ b/layouts/classic/layout.css
@@ -27,6 +27,7 @@ td.giAlbumCell table, td.giItemCell table {
     margin: 0 0 0 8px;
     padding: 0;
 }
+* html #gallery td.tree ul ul { margin-top: -1em; } /* Why does IE need this? */
 
 #gallery td.tree li {
     padding: 0;
